--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 	<title>Eurocode</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="css/reset.css" type="text/css">
-	<link rel="stylesheet" href="css/1a.css" type="text/css">
+	<link rel="stylesheet" href="reset.css" type="text/css">
+	<link rel="stylesheet" href="1a.css" type="text/css">
 </head>
 
 <body>
